# ETL-Project

./: .env  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: airflow.cfg
dags/: dag1_flight_price.py  dag2_exchange_rate.py  extract.py  extract2.py  load.py  load2.py  transform.py  transform2.py
