[tool.poetry]
name = "5.1.3"
version = "0.1.0"
description = ""
authors = ["stephanie <stephavril96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "2.0.1"
pandas = "^2.1.4"
undetected-chromedriver = "^3.5.4"
beautifulsoup4 = "^4.12.2"
loguru = "^0.7.2"
SQLAlchemy = "^2.0.24"
pymysql = "^1.1.0"
APScheduler = "^3.10.4"
PyJWT = "^2.8.0"
uvicorn = "^0.25.0"
fastapi = "^0.108.0"
google = "^3.0.0"
google-cloud-bigquery = "^3.14.1"
pandas-gbq = "^0.20.0"
selenium = "4.16.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
